# rust-wasm-bazaar-experiment

./: Cargo.toml  README.md  build.sh  index.html
pkg/: baz.js  baz_bg.wasm
src/: chart_options.json  lib.rs  pickletime.rs  scheduler.rs
styles/: main.css  sprites.css
