[package]
name = "baz"
version = "0.1.0"
authors = ["thinkier <26728734+thinkier@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook="*"
js-sys = "0.3.37"
serde-wasm-bindgen = "0.1.3"

[dependencies.wasm-bindgen]
version = "0.2.60"
features = [
  "nightly"
]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Storage',
]

[dependencies.skyblock-rs]
git="https://github.com/thinkier/skyblock-rs"
default-features = false
